--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <a class="nav-link" href="faculty.html">Faculty</a>
             </li>
             <li class="nav-item mx-3">
-              <a class="nav-link" href="contact.html">Contact Us</a>
+              <a class="nav-link" href="#">Contact Us</a>
             </li>
           </ul>
           <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
